# ai-chat-app

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  async_fetch.py  hello_claude.py  js_to_python.py  main.py  models.md  models.py  pyproject.toml  quickstart.py
backend/: conftest.py  curl_examples.md  main.py  test_main.py
frontend/app/: chat-app.tsx  chat.tsx  page.tsx  settings-panel.tsx  sidebar.tsx  storage.ts  types.ts
loadtest/: mock_server.py  run.py
