[project]
name = "ai-chat-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]
[tool.fastapi]
entrypoint = "backend.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]
