[project]
name = "ai-chat-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.0",
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]
[tool.fastapi]
entrypoint = "backend.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]
